Add CORS proxy. Needs to be changed to prod in a few days.

--- a/config.json
+++ b/config.json
@@ -16,13 +16,15 @@
             "text": "Your organisation",
             "link": "http://www.example.com"
         },
-        "appName": "Terria Map",
+        "appName": "Terria Map Static",
         "supportEmail-CHANGETHIS": "help@example.com",
         "brandBarElements": [
             "",
             "<a target=\"_blank\" href=\"http://www.nicta.com.au\"><img src=\"images/terria_logo.png\" height=\"52\" title=\"Version: {{version}}\" /></a>",
             ""
-        ]
+        ],
+        "corsProxyBaseUrl": "http://nationalmap.research.nicta.com.au/proxy/",
+        "proxyableDomainsUrl": "http://preprod.nationalmap.gov.au/proxyabledomains/"
     }
 }
 
