--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
         "appName": "Terria Map Static",
         "supportEmail-CHANGETHIS": "help@example.com",
         "brandBarElements": [
-            "<img src='http://wri.github.io/pnat-landing-page/img/logo/gab-logo.png'>",
+            "<img src='http://wri.github.io/pnat-landing-page/img/logo/gab-logo.png' height='66.25px' width='50px'>",
             "<a href='http://www.pnat-gabon.ga'>PNAT Gabon</a>",
             ""
         ],
